# LBALab

./: .gitignore  LICENSE  README.md  lba_all.py  lba_resd.py  main.cpp  mft.py  ntfs_forensics_toolkit.py  pf_lba.py  pyproject.toml  r_lba.py  res2.py  setup.py  sim_lba.py  w_lba.py
archive/: README.md  deep_write.py  f_2_lba.py  lba.py  lba_direct.py  lba_safe.py  mft_fixed.py  ntfs_lba_tool.py  r_lba.py  res.py  w2_lba.cpp  w_lba.py
docs/: API.md  EXAMPLES.md  README.md  file_organization_summary.md
examples/: README.md  mft.py
ntfs_toolkit/: __init__.py  __main__.py
ntfs_toolkit/analyzers/: __init__.py  comprehensive_analyzer.py  extent_mapper.py  file_analyzer.py  lba_reader.py  mft_parser.py  residency_checker.py
ntfs_toolkit/core/: __init__.py  disk_io.py  disk_writer.py  ntfs_structures.py  privileges.py  windows_api.py
ntfs_toolkit/dangerous/: __init__.py  content_overwriter.py  lba_writer.py  metadata_wiper.py  mft_destroyer.py  reference_eliminator.py  secure_deleter.py  ssd_handler.py
ntfs_toolkit/explorer/: __init__.py  __main__.py  animate.py  cli.py  display.py
ntfs_toolkit/learn/: __init__.py  __main__.py  lesson_deletion.py  lesson_extents.py  lesson_lba.py  lesson_mft.py  lesson_residency.py  lesson_volume.py  runner.py
tests/: README.md
tools/: 01_lba_reader.py  02_file_to_lba_mapper.py  04_residency_checker.py  COMPLETE_MODULARIZATION.md  DEEP_AUDIT.md  FINAL_AUDIT_100_PERCENT.md  MODULARIZATION_STATUS.md  MODULAR_README.md  README.md  VERIFICATION_COMPLETE.md  cli.py  ntfs_forensics_toolkit.py  test_imports.py  test_secure_delete.py  verify_complete.py
tools/core/: __init__.py  disk_io.py  ntfs_structures.py  windows_api.py
tools/modules/: __init__.py  comprehensive_analyzer.py  (+17 more)
